# jira-upload-csv

./: .flake8  CHANGELOG.md  LICENSE  Makefile  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.2.0.md  cli.py  dev-requirements.txt  env.example  multi_issue_upload_with_subtasks.py  mypy.ini  pyproject.toml  requirements.txt  run_tests.py  template.csv  test_basic_functionality.py  test_multi_issue_upload_with_subtasks.py
.github/workflows/: release.yml  test.yml
src/: __init__.py  config.py  constants.py  csv_processor.py  jira_client.py  main.py  models.py  multi_issue_upload_with_subtasks.py
tests/: conftest.py  test_improved_modules.py  test_integration.py  test_multi_issue_upload_with_subtasks.py
